[package]
name = "plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

meval = "0.2.0"

egui = "0.19.0"
egui_extras = {version = "0.19.0", features = ["svg"]}
eframe = "0.19.0"

poloto = "15.2.0"
